# InfraGuard

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml  test-config-full.yaml
config/examples/: c2-brute-ratel.yaml  c2-cobalt-strike.yaml  c2-havoc.yaml  c2-mythic.yaml  c2-nighthawk.yaml  c2-poshc2.yaml  c2-sliver.yaml  payload-delivery.yaml  phishing-club.yaml  phishing-cuddlephish.yaml  phishing-evilginx.yaml  phishing-gophish.yaml  tunnel-chisel.yaml  tunnel-ligolo.yaml
docs/: _config.yml  index.md
docs/architecture/: index.md
docs/cli/: index.md
docs/configuration/: domains.md  index.md  intel.md  listeners.md  pipeline.md  plugins.md
docs/frameworks/: index.md
docs/getting-started/: docker.md  installation.md  quickstart.md
docs/payload-delivery/: backends.md  index.md  overview.md  tokens.md
images/: InfraGuard Infrastructure Diagram.drawio
infraguard/: main.py
infraguard/config/: cli_ext.py  loader.py  schema.py
infraguard/core/: app.py  content.py  deadman.py  drop.py  headers.py  ja3.py  middleware.py  proxy.py  rate_limiter.py  router.py  tls_protocol.py
infraguard/deploy/: profile_detect.py
infraguard/integrations/: phishingclub.py
infraguard/intel/: burn_detect.py  canary.py  ct_monitor.py  ip_lists.py  manager.py  reputation.py
infraguard/listeners/: dns.py  http.py  tcp_tunnel.py  websocket.py
infraguard/models/: common.py  events.py
infraguard/pipeline/: base.py  enumeration_filter.py  fingerprint_filter.py  ip_filter.py  phishing_filter.py  profile_filter.py  replay_filter.py  sandbox_filter.py  (+1 more)
(+26 files in other folders)
